# Basic_interpreter

./: .gitignore  CMakeLists.txt  README.md
Basic/: Basic.cpp  Makefile  evalstate.cpp  evalstate.h  exp.cpp  exp.h  parser.cpp  parser.h  program.cpp  program.h  statement.cpp  statement.h
Demo/: Basic-Demo-32bit  Basic-Demo-64bit
StanfordCPPLib/: Makefile
StanfordCPPLib/private/: main.h
